kubernetes/services/openclarity.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclarity
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-cluster-admin-authentication@kubernetescrd
spec:
  tls:
    - hosts:
        - openclarity.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: openclarity.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openclarity-gateway
                port:
                  name: http
